# config-recommendation-ml

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  01_explore_dataset.ipynb  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  dvc.yaml  environment-base.yaml  environment.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
config/: data.yaml  evaluation.yaml  features.yaml  github.yaml  model.yaml  seeds.yaml  training.yaml
data/: README.md
data/interim/: features.json  structure.json
data/processed/: dataset.csv
data/processed/v1.0.0/: manifest.json
data/processed/v1.0.1/: dataset.csv  manifest.json
data/raw/: config_20260216_220412.json  config_20260216_220418.json  config_20260216_220450.json  raw_metadata.json
docs/: README.md  dataset_card.md  experiment_plan.md  model_card.md  reproducibility_checklist.md  search_criteria_guide.md
environment/: environment-base.yaml  environment-torch.yaml
logs/: .gitignore  config_20260326_193435.json  config_20260326_213326.json  config_20260327_183156.json  config_20260328_102904.json  config_20260401_124147.json  config_20260401_124442.json  config_20260401_124845.json  config_20260401_125140.json  config_20260401_130609.json  config_20260401_152220.json  config_20260401_152827.json
notebooks/: 01_explore_dataset.ipynb  01_test_dataset_building.ipynb  02_correlation_analysis.ipynb  03_shap_analysis.ipynb  04_dataset_insights.ipynb  05_variant_generation_process.ipynb  06_variant_statistics.ipynb  extract_projects_structure.ipynb
notebooks/artifacts/correlation/: feature_feature_corr.csv  feature_feature_pvalues.csv  feature_label_corr.csv  label_label_corr.csv
notebooks/artifacts/shap/: shap_importance_has_conda_env_file.csv  shap_importance_has_docker_compose.csv  shap_importance_has_dockerfile.csv  shap_importance_has_github_actions.csv  shap_importance_has_makefile.csv  shap_importance_has_precommit_config.csv  shap_importance_has_pyproject_toml.csv  shap_importance_has_requirements_txt.csv  shap_importance_has_setup_py.csv  shap_importance_has_tox_ini.csv
notebooks/data/interim/: nb_test.json  nb_test_enriched.json  nb_test_features.json
notebooks/data/processed/: manifest.json
notebooks/data/raw/: nb_test.json
src/: __init__.py  compute_features.py  config.py  extract_dataset.py  extract_structure.py  fetch_raw.py  github_client.py  logger.py  pipeline_init.py  utils.py
src/config_recommendation_ml/data/: build_dataset.py  compute_features.py  extract_structure.py  fetch_raw.py
src/data/: __init__.py  build_dataset.py  compute_features.py  enrich_content.py  extract_structure.py  fetch_raw.py  utils.py
src/experiments/: __init__.py  build_variants.py
src/utils/: config.py
(+18 files in other folders)
